<resources>
    <string name="app_name">Lab_Project_Eight</string>
    <string name="name_textview">姓名: </string>
    <string name="birthday_textview">生日: </string>
    <string name="gift_textview">礼物: </string>
    <string name="phone_textview">电话: </string>
    <string name="add_button_text">增加</string>
    <string name="add_item_button_text">增加条目</string>
    <string name="name">姓名</string>
    <string name="gift">礼物</string>
    <string name="birthday">生日</string>
</resources>
