<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_item_button"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/add_item_button_text"
        android:textColor="@color/add_button_text_color"
        android:background="@color/add_button_color"
        android:textSize="17dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="18dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/birthday"
            android:textAlignment="center"
            android:textSize="18dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/gift"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999999"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView">

    </ListView>

</LinearLayout>
