<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/name_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>


        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"
            android:layout_row="0"
            android:layout_column="1"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/birthday_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/birthday_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/gift_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/gift_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"/>
    </GridLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/add_button_text"
        android:textColor="@color/add_button_text_color"
        android:background="@color/add_button_color"/>

</LinearLayout>
