<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginEnd="12dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/name_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="18dp"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/birthday_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/birthday_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"/>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/gift_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/gift_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/phone_textview"
            android:textSize="18dp"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/phone_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="5"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="18dp"/>

    </GridLayout>

</LinearLayout>
